# rule-of-cheese

./: .gitmodules  CMakeLists.txt  benchmark-cases.cmake  config.json  readme.md
benchmark-grapher/: CMakeLists.txt
benchmark-grapher/include/grapher/: core.hpp  display.hpp  iostream.hpp
benchmark-grapher/src/: benchmark-grapher.cpp  display.cpp  iostream.cpp  parsing.cpp
benchmarks/: .gitignore  CMakeLists.txt  hello_range.cpp
benchmarks/cases/function_selection/: enable_if_t.cpp
benchmarks/cases/numbered_structs/: template.cpp
benchmarks/cases/variadic_sum/: expansion.cpp  recursive.cpp
benchmarks/chiel/: 01_no_sfinae.cpp  50_alias_call_parameter_addition.cpp
benchmarks/cmake/: benchmarking.cmake
benchmarks/hello_world/: 00.cpp
benchmarks/include/benchmarks/: hello_world.hpp
cases/function_selection/: control.cpp  enable_if.cpp  enable_if_t.cpp  if_constexpr.cpp  requires.cpp
cases/numbered_structs/: non_template.cpp
cases/variadic_sum/: expansion.cpp  recursive.cpp
cmake/: ctbench.cmake
configs/: compare_config.json  feature_comparison.json  front.json  front_back.json  readme.md
configs/function_selection/: feature_comparison.json  front.json  front_back.json
tooling/: CMakeLists.txt
